<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorCalculatorButtonsArea"
        android:columnCount="5"
        android:paddingBottom="0dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:rowCount="1"

        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/button_memory_clear"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_clear"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button_memory_recall"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_recall"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button_memory_add"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_add"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button_memory_subtract"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_subtract"
            android:layout_margin="2dp"/>

        <Button
            android:id="@+id/button_memory_store"
            style="@style/CalculatorButton.Memory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="4"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/memory_store"
            android:layout_margin="2dp"/>

    </GridLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorCalculatorButtonsArea"
        android:columnCount="4"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="0dp"
        android:rowCount="6"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.5">

        <Button
            android:id="@+id/button_percentage"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/percentage"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_root"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/root"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_square"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/square"
            android:textAllCaps="false"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_fraction"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:text="@string/fraction"
            android:textAllCaps="false"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_ce"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/ce"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_c"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/c"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_backspace"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/backspace"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_division"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:text="@string/division"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_7"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/value_7"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_8"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/value_8"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_9"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/value_9"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_multiplication"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:text="@string/multiplication"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_4"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/value_4"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_5"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/value_5"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_6"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/value_6"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_subtraction"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:text="@string/subtraction"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_1"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/value_1"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_2"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/value_2"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_3"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/value_3"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_addition"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:text="@string/addition"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_plus_minus"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:text="@string/plus_minus"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_0"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:text="@string/value_0"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_comma"
            style="@style/CalculatorButton.Number"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:text="@string/comma"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/button_equal"
            style="@style/CalculatorButton.Action"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:text="@string/equal"
            android:layout_margin="3dp"/>

    </GridLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/number_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:gravity="bottom|end"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/colorCalculatorNumberHistoryText"
            tools:textView="9 + 2 - 1 × " />

        <TextView
            android:id="@+id/number_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="end"
            android:text="@string/value_0"
            android:textAlignment="gravity"
            android:textColor="@color/colorCalculatorNumberCurrentText"
            app:autoSizeTextType="uniform"
            tools:textView="10" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>