<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhishingFacebookFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"

    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="240dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:src="@drawable/phishing_fb_login_illus_2"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/phishing_fb_icon_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/phishing_facebook_default_view_margin"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/phishing_facebook_default_view_margin"
        android:text="@string/facebook_phishing_request_re_login"
        android:textColor="#FD5757"
        android:textSize="15dp"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/phishing_facebook_default_view_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/phishing_facebook_default_view_margin"
        android:backgroundTint="@color/facebook_edit_text_color"
        android:hint="@string/facebook_phishing_hint_input_phone_email">
    </EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/phishing_facebook_default_view_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/phishing_facebook_default_view_margin"
        android:backgroundTint="@color/facebook_edit_text_color"
        android:hint="@string/facebook_phishing_hint_input_password"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/bt_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/phishing_facebook_default_view_margin"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/phishing_facebook_default_view_margin"
        android:backgroundTint="@color/facebook_primary_color_light"
        android:padding="2dp"
        android:text="@string/facebook_phishing_log_in"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/phishing_facebook_default_view_margin"
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/phishing_facebook_default_view_margin"
        android:text="@string/facebook_phishing_forgot_password"
        android:textColor="@color/facebook_primary_color_light"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="@dimen/phishing_facebook_default_view_margin"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/phishing_facebook_default_view_margin">

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/orText"
            android:background="@color/facebook_edit_text_color" />

        <TextView
            android:id="@+id/orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/facebook_phishing_or"
            android:textColor="@color/facebook_edit_text_color"
            android:textSize="14sp"/>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/orText"
            android:background="@color/facebook_edit_text_color" />
    </RelativeLayout>

    <Button
        android:id="@+id/bt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/phishing_facebook_default_view_margin"
        android:layout_marginTop="30dp"
        android:layout_marginRight="@dimen/phishing_facebook_default_view_margin"
        android:backgroundTint="#20B326"
        android:text="@string/facebook_phishing_create_new_account"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold"/>

</LinearLayout>

</ScrollView>